[gd_scene load_steps=5 format=3 uid="uid://dqbrjlhyvjywk"]

[ext_resource type="Script" path="res://Character/player.gd" id="1_28scq"]
[ext_resource type="PackedScene" uid="uid://ctlcwucy2xg43" path="res://CSGPrototype/Fox.tscn" id="1_bryus"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_sno11"]
radius = 1.19772
height = 5.52242

[sub_resource type="SphereShape3D" id="SphereShape3D_tmp0s"]
radius = 0.1

[node name="Player" type="CharacterBody3D" groups=["Player"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_28scq")

[node name="FoxMesh" parent="." instance=ExtResource("1_bryus")]

[node name="Skeleton3D" parent="FoxMesh/RootNode/AnimalArmature" index="0"]
bones/0/position = Vector3(1.03723e-11, -7.77519e-05, 0.004587)
bones/0/rotation = Quaternion(0.70516, 5.32381e-08, 5.35316e-08, 0.709048)
bones/1/position = Vector3(9.43672e-10, 0.0151163, -0.00638804)
bones/1/rotation = Quaternion(0.772402, -8.46456e-07, -9.15924e-07, 0.635134)
bones/2/rotation = Quaternion(-3.20262e-07, 0.99754, -0.070097, 2.17344e-06)
bones/3/rotation = Quaternion(-0.00596884, -2.07944e-05, 1.63369e-07, 0.999982)
bones/4/rotation = Quaternion(0.105918, 2.0978e-05, -2.8833e-06, 0.994375)
bones/5/rotation = Quaternion(0.0765439, -0.00371067, -0.00752507, 0.997031)
bones/6/rotation = Quaternion(0.0298805, -0.00168831, -0.0109776, 0.999492)
bones/7/rotation = Quaternion(-0.0573661, -1.53516e-07, 5.79108e-08, 0.998353)
bones/8/rotation = Quaternion(-0.256652, 0.0382552, -0.0284887, 0.965326)
bones/11/rotation = Quaternion(0.107324, 0.6017, 0.0553098, 0.789544)
bones/12/rotation = Quaternion(-0.0538218, -0.0210338, -0.0174745, 0.998176)
bones/13/rotation = Quaternion(-0.0312069, -0.0113192, -0.0444818, 0.998459)
bones/16/rotation = Quaternion(0.069543, -0.492067, 0.0502161, 0.866321)
bones/17/rotation = Quaternion(-0.0538211, 0.0210337, 0.0174748, 0.998176)
bones/18/rotation = Quaternion(-0.0312086, 0.0113194, 0.0444821, 0.998458)
bones/20/position = Vector3(-0.0022308, 0.00707087, -0.00371745)
bones/21/rotation = Quaternion(0.742429, 0.65808, -0.0644212, -0.10761)
bones/22/rotation = Quaternion(-8.85551e-07, 0.974892, -0.222678, 2.03777e-06)
bones/24/position = Vector3(0.00223044, 0.00707086, -0.00371767)
bones/24/rotation = Quaternion(0.450924, 0.51348, 0.548575, -0.481738)
bones/25/rotation = Quaternion(0.742429, -0.658079, 0.0644239, -0.107613)
bones/26/rotation = Quaternion(-2.64488e-07, 0.974891, -0.222683, -1.88843e-06)
bones/28/position = Vector3(0.002145, 0.000752239, 0.00225703)
bones/28/rotation = Quaternion(0.569495, 0.518877, 0.420995, -0.478754)
bones/29/rotation = Quaternion(0.719237, 0.644943, 0.172166, 0.192628)
bones/30/rotation = Quaternion(0.708625, -0.000337582, 0.0012362, 0.705584)
bones/31/rotation = Quaternion(-0.000493499, 0.76453, -0.644589, -0.00040495)
bones/33/rotation = Quaternion(0.569493, -0.518879, -0.420997, -0.478752)
bones/34/rotation = Quaternion(0.719236, -0.644945, -0.172167, 0.192627)
bones/35/rotation = Quaternion(0.708627, 0.000337712, -0.0012361, 0.705582)
bones/36/rotation = Quaternion(0.000493497, 0.764526, -0.644593, 0.000404954)
bones/38/position = Vector3(2.1036e-09, -0.00234547, 0.000839775)
bones/38/rotation = Quaternion(0.978572, -2.31433e-07, -1.38709e-06, -0.205907)
bones/39/rotation = Quaternion(-0.617331, -5.06103e-09, 1.44877e-07, 0.786704)
bones/40/rotation = Quaternion(-0.00132137, 3.72236e-09, 1.99284e-08, 0.999999)
bones/41/rotation = Quaternion(0.0229667, 5.01297e-06, 4.81105e-06, 0.999736)
bones/42/rotation = Quaternion(0.122967, 2.16828e-07, -2.20114e-07, 0.992411)
bones/43/rotation = Quaternion(0.165258, -8.80258e-08, -8.66804e-08, 0.98625)
bones/44/rotation = Quaternion(0.0305935, 4.43085e-09, -8.12963e-08, 0.999532)
bones/45/rotation = Quaternion(0.237843, 2.58829e-08, -1.54619e-07, 0.971304)
bones/47/position = Vector3(0.00217028, 0.0034705, 0.0365776)
bones/49/position = Vector3(0.00217283, 0.00349004, 0.0336971)
bones/51/position = Vector3(-0.00217029, 0.0034705, 0.0365776)
bones/53/position = Vector3(-0.00217284, 0.00349004, 0.0336971)
bones/55/position = Vector3(0.00341436, 0.0102405, 0.00203863)
bones/55/rotation = Quaternion(0.929137, 1.22971e-07, -3.09023e-07, -0.369735)
bones/58/position = Vector3(0.00326694, -0.0104786, 0.00216491)
bones/58/rotation = Quaternion(0.905065, 1.90117e-07, -4.04606e-07, -0.425274)
bones/61/position = Vector3(-0.00341436, 0.0102405, 0.00203863)
bones/61/rotation = Quaternion(0.929137, -1.22971e-07, 3.09023e-07, -0.369735)
bones/62/rotation = Quaternion(4.94235e-07, 0.929137, -0.369735, -6.23957e-07)
bones/64/position = Vector3(-0.00326694, -0.0104786, 0.00216491)
bones/64/rotation = Quaternion(0.905065, -1.90117e-07, 4.04606e-07, -0.425274)
bones/65/rotation = Quaternion(5.85356e-07, 0.937708, -0.347424, -7.41496e-07)

[node name="AnimationPlayer" parent="FoxMesh" index="1"]
autoplay = "Idle"
playback_default_blend_time = 1.0

[node name="foxCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.19626, 0)
shape = SubResource("CapsuleShape3D_sno11")

[node name="CameraMount" type="Node3D" parent="."]

[node name="SpringArm3D" type="SpringArm3D" parent="CameraMount"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7, 3)
shape = SubResource("SphereShape3D_tmp0s")
spring_length = 2.5
margin = 0.2

[node name="Camera3D" type="Camera3D" parent="CameraMount/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 0, 0)

[editable path="FoxMesh"]
